@@ -1,10 +1,13 @@
 {
 "%1 minutes":"",
+"(Currently only 'SB Player' is supported.)":"",
 "Add":"",
 "Add Favorite":"",
 "Add URL":"",
 "Add a URL to play queue":"",
 "Add favorite":"",
+"Add menu option to start player":"",
+"Add option to main menu to launch player.":"",
 "Add selection to queue":"",
 "Add to favorites":"",
 "Added to favorites":"",
@@ -136,6 +139,7 @@
 "Play next":"",
 "Play now":"",
 "Play selection":"",
+"Player":"",
 "Player Settings":"",
 "Players":"",
 "Playing":"",
@@ -220,6 +224,7 @@
 "Split artist (and album) lists into A..Z":"",
 "Standard Players":"",
 "Start":"",
+"Start player":"",
 "Start time":"",
 "Stop":"",
 "Stop button":"",
