@@ -14,9 +14,12 @@
 "Rename favorite":"Rename favourite",
 "Sort favorites list":"Sort favourites list",
 "%1 minutes":"",
+"(Currently only 'SB Player' is supported.)":"",
 "Add":"",
 "Add URL":"",
 "Add a URL to play queue":"",
+"Add menu option to start player":"",
+"Add option to main menu to launch player.":"",
 "Add selection to queue":"",
 "Alarm settings":"",
 "Alarms":"",
@@ -140,6 +143,7 @@
 "Play next":"",
 "Play now":"",
 "Play selection":"",
+"Player":"",
 "Player Settings":"",
 "Players":"",
 "Playing":"",
@@ -220,6 +224,7 @@
 "Split artist (and album) lists into A..Z":"",
 "Standard Players":"",
 "Start":"",
+"Start player":"",
 "Start time":"",
 "Stop":"",
 "Stop button":"",
