@@ -124,11 +124,14 @@
 "1 Year":"1 Jaar",
 "%1 Years":"%1 Jaren",
 "%1 minutes":"",
+"(Currently only 'SB Player' is supported.)":"",
 "Add":"",
 "Add Favorite":"",
 "Add URL":"",
 "Add a URL to play queue":"",
 "Add favorite":"",
+"Add menu option to start player":"",
+"Add option to main menu to launch player.":"",
 "Add selection to queue":"",
 "Album Mix":"",
 "All plugins up to date.":"",
@@ -195,6 +198,7 @@
 "Play album starting at track":"",
 "Play next":"",
 "Play selection":"",
+"Player":"",
 "Players":"",
 "Plugins":"",
 "Power on all group members when playing to group.":"",
@@ -248,6 +252,7 @@
 "Split artist (and album) lists into A..Z":"",
 "Standard Players":"",
 "Start":"",
+"Start player":"",
 "Stop":"",
 "Stop button":"",
 "Switch Off":"",
